# go-big-with-github-actions

./: .gitignore  .pre-commit-config.yaml  AGENTS.MD  CONTRIBUTING.md  Makefile  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  scrape.ipynb
.github/workflows/: continuous-deployment.yaml  docs.yaml  ec2-custom-runner.yaml  first-scraper.yaml  reusable-custom-runner.yaml  reusable-ec2-job.yaml  scrape-and-deploy.yaml  scraper-with-input.yaml  scraper-with-matrix.yaml  scraper.yaml  second-scraper.yaml
data/: ca.csv  ny.csv
docs/: about.md  conf.py  deploy.md  ec2.md  first-action.md  getting-started.md  index.md  matrix.md  scraper.md  what-are-actions.md  what-is-yaml.md
docs/_static/: ec2.md
site/src/: ia.csv  index.md
skills/browser-screenshots/: SKILL.md
skills/browser-screenshots/scripts/: add-highlights.cjs  capture.cjs  save-auth.cjs
