[build-system]
requires = ["setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "go-big-with-github-actions"
description = "Learn how to scale up your data pipelines using GitHub’s powerful Actions framework"
version = "1.0.0"
requires-python = "==3.12.*"
dependencies = [
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-palewire-theme",
    'warn-scraper',
]

[project.optional-dependencies]
mypy = [
    "mypy",
]

[tool.setuptools]
packages = ["docs",]
