[build-system]
requires = ["setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "go-big-with-github-actions"
description = "Learn how to scale up your data pipelines using GitHub’s powerful Actions framework"
version = "1.0.0"
requires-python = "==3.12.*"
dependencies = [
    "bs4",
    "requests",
    "jupyterlab",
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-palewire-theme==0.1.3",
    "warn-scraper",
    "pre-commit",
]

[project.optional-dependencies]
mypy = [
    "mypy",
]

[tool.setuptools]
packages = ["docs",]
