[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "go-big-with-github-actions"
version = "1.0.0"
description = "Learn how to scale up your data pipelines using GitHub’s powerful Actions framework"
readme = "README.md"
requires-python = "==3.13.*"
license = "MIT"
dependencies = [
    "bs4",
    "requests",
    "jupyterlab",
    "warn-scraper",
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-palewire-theme",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "pre-commit",
    "mypy",
]

[tool.setuptools]
packages = []
